<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/nav_about" />

        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_menu_team"
            android:title="@string/nav_team" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_menu_services"
            android:title="@string/nav_services" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/nav_testimonials"
            android:icon="@drawable/ic_menu_testimonials"
            android:title="@string/nav_testimonials" />
        <item
            android:id="@+id/nav_grow"
        android:icon="@drawable/ic_menu_grow"
        android:title="@string/nav_grow" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_menu_donate"
            android:title="@string/nav_donate" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/nav_contact" />
        <item
            android:id="@+id/nav_faqs"
            android:icon="@drawable/ic_menu_faqs"
            android:title="@string/nav_faqs" />
    </group>

</menu>
