<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/topLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/aboutUsImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_description"
                android:gravity="center" />

            <LinearLayout
                android:id="@+id/bottomLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/tile_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:text="@string/our_mission_title" />

                <TextView
                    android:id="@+id/aboutUsTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_done_24dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/our_mission_fact1"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/aboutUsTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_done_24dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/our_mission_fact2"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/aboutUsTextView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_done_24dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/our_mission_fact3"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/aboutUsTextView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_done_24dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/our_mission_fact4"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/the_hala_advantage_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/factTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_done_24dp"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/the_hala_advantage_fact1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/factTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_done_24dp"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/the_hala_advantage_fact2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/factTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_done_24dp"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/the_hala_advantage_fact3"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/factTextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_done_24dp"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/the_hala_advantage_fact4"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/factTextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_done_24dp"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/the_hala_advantage_fact5"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/factTextView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_done_24dp"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/the_hala_advantage_fact6"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/factTextView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_done_24dp"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/the_hala_advantage_fact7"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/factTextView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_done_24dp"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/the_hala_advantage_fact8"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/factTextView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_done_24dp"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/the_hala_advantage_fact9"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/factTextView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_done_24dp"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/the_hala_advantage_fact10"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/factTextView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_done_24dp"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/the_hala_advantage_fact11"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/factTextView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_done_24dp"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/the_hala_advantage_fact12"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/factTextView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_done_24dp"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/the_hala_advantage_fact13"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/factTextView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_done_24dp"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/the_hala_advantage_fact14"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
